@startuml Memento Pattern

title Padrão Memento - Sistema Usuario

class Usuario <<Originator>> {
    -nome: String
    -email: String
    -ativo: Boolean
    --
    +criar_memento(): UsuarioMemento
    +restaurar_memento(memento: UsuarioMemento): void
    +set_nome(nome: String): void
    +set_email(email: String): void
}

class UsuarioMemento <<Memento>> {
    -_nome: String
    -_email: String
    -_ativo: Boolean
    -_timestamp: DateTime
    --
    +nome(): String
    +email(): String
    +ativo(): Boolean
    +timestamp(): DateTime
}

class CaretakerUsuario <<Caretaker>> {
    -_historico: List<UsuarioMemento>
    -_indice_atual: int
    -_max_historico: int
    --
    +salvar_estado(usuario: Usuario): void
    +desfazer(usuario: Usuario): Boolean
    +refazer(usuario: Usuario): Boolean
    +obter_historico(): List<UsuarioMemento>
    +limpar_historico(): void
    +pode_desfazer(): Boolean
    +pode_refazer(): Boolean
    +navegar_para(indice: int, usuario: Usuario): Boolean
}

Usuario --> UsuarioMemento
CaretakerUsuario o-- UsuarioMemento

@enduml